--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -341,7 +341,14 @@
         .section-title.animate::after {
             width: 100%;
         }
-        
+
+ .games-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+            gap: 2rem;
+        }
+
+
               /* Card styles from Uiverse.io by dylanharriscameron */
         .card {
             position: relative;
