--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -374,7 +374,7 @@ body {
             width: 100%;
         }
 
-
+.cards-container
 /* From Uiverse.io by alexruix */ 
 .card {
  --background: linear-gradient(to left, #f7ba2b 0%, #ea5358 100%);
