--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -247,8 +247,9 @@ body {
               /* Base styles */
 .banner-card {
   --background: linear-gradient(to left, #f7ba2b 0%, #ea5358 100%);
-  width: 100%;
-  height: 250px;
+width: 100%;
+  height: auto;
+  max-width: 100%;
   padding: 5px;
   border-radius: 1rem;
   overflow: visible;
