--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -290,9 +290,10 @@ width: 100%;
 }
 
 .banner-card p {
-  font-size: 1.2rem;
+font-size: clamp(1rem, 4vw, 2rem);
+  text-align: center;
+  padding: 1rem;
   color: #ccc;
-  margin: 0;
 }
 
 .banner-card h1 {
@@ -322,6 +323,37 @@ width: 100%;
 .banner-card .explore-btn:hover {
   background-color: #ea5358;
   color: #fff;
+}
+@media (max-width: 768px) {
+  .banner-card {
+    padding: 10px;
+    border-radius: 0.5rem;
+  }
+
+  .banner-card::after {
+    top: 20px;
+    transform: scale(0.9);
+    filter: blur(15px);
+  }
+
+  .banner-card-info {
+    padding: 1.2rem;
+    gap: 0.8rem;
+  }
+
+  .banner-card h1 {
+    font-size: 1.4rem;
+  }
+
+  .banner-card p {
+    font-size: 1rem;
+    padding: 0.5rem;
+  }
+
+  .banner-card .explore-btn {
+    padding: 0.5rem 1.2rem;
+    font-size: 0.95rem;
+  }
 }
 
 /*Hover*/
