--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -326,7 +326,8 @@ font-size: clamp(1rem, 4vw, 2rem);
 }
 @media (max-width: 768px) {
   .banner-card {
-    padding: 10px;
+     height: 200px;
+ padding: 5px;
     border-radius: 0.5rem;
   }
 
