--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -256,6 +256,8 @@ width: 100%;
   background: var(--background);
   position: relative;
   z-index: 1;
+   margin-top: 2rem; /* or use px, %, etc. */
+
 }
 
 .banner-card::after {
