--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -249,7 +249,12 @@
  margin-top: 40px; /* adds space above your main content */
   }
         
-       
+       .section-title {
+  text-align: center;
+  font-size: 2.2rem;
+  margin-bottom: 2rem;
+  color: #f7ba2b;
+}
       
            .style-card {
           --background: linear-gradient(to left, #f7ba2b 0%, #ea5358 100%);
