--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,7 +144,8 @@ html, body {
             border-radius: 50px;
             overflow: hidden;
             padding: 2px;
-            background: linear-gradient(90deg, #ff4757, #5352ed);
+            background:  linear-gradient(to left, #ff9a9e, #fad0c4, #fbc2eb);
+;
         }
         
         .search-inner {
@@ -169,8 +170,8 @@ html, body {
         }
         
         .search-bar button {
-            background: linear-gradient(90deg, #ff4757, #5352ed);
-            border: none;
+            background:  linear-gradient(to left, #ff9a9e, #fad0c4, #fbc2eb);
+          border: none;
             padding: 0.7rem 1.5rem;
             color: white;
             cursor: pointer;
@@ -246,7 +247,6 @@ html, body {
               /* Base styles */
 .banner-card {
  --background: linear-gradient(to left, #ff9a9e, #fad0c4, #fbc2eb);
-
 width: 100%;
   height: 300px;
   max-width: 100%;
@@ -305,14 +305,14 @@ font-size: clamp(1rem, 4vw, 2rem);
 }
 
 .banner-card .highlight {
- --background: linear-gradient(to left, #ff9a9e, #fad0c4, #fbc2eb);
+ background: linear-gradient(to left, #ff9a9e, #fad0c4, #fbc2eb);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   display: inline-block;
 }
 
 .banner-card .explore-btn {
-   --background: linear-gradient(to left, #ff9a9e, #fad0c4, #fbc2eb);
+   background: linear-gradient(to left, #ff9a9e, #fad0c4, #fbc2eb);
   color: #181818;
   border: none;
   padding: 0.6rem 1.5rem;
@@ -323,7 +323,7 @@ font-size: clamp(1rem, 4vw, 2rem);
 }
 
 .banner-card .explore-btn:hover {
-   --background: linear-gradient(to left, #fbc2eb, #fad0c4, #ff9a9e);
+  background: linear-gradient(to left, #fbc2eb, #fad0c4, #ff9a9e);
   color: #fff;
 }
 @media (max-width: 768px) {
@@ -360,11 +360,11 @@ font-size: clamp(1rem, 4vw, 2rem);
 }
 
 /*Hover*/
-.card:hover::after {
+.banner-card:hover::after {
  opacity: 0;
 }
 
-.banner-card-:hover .banner-card-info {
+.banner-card:hover .banner-card-info {
  color: #f7ba2b;
  transition: color 1s;
 }
@@ -463,7 +463,7 @@ font-size: clamp(1rem, 4vw, 2rem);
 
 /* Button */
 .download-btn {
-  background-color: #f7ba2b;
+background: linear-gradient(to left, #f78ca0, #f9748f, #7aa1f7);
   color: #181818;
   padding: 0.5rem 1.2rem;
   font-weight: bold;
@@ -475,7 +475,7 @@ font-size: clamp(1rem, 4vw, 2rem);
 }
 
 .download-btn:hover {
-  background-color: #ea5358;
+background: linear-gradient(to left, #f78ca0, #f9748f, #7aa1f7);
   color: #fff;
 }
 
