--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -254,7 +254,7 @@
 }
       
            .style-card {
- background: linear-gradient(to left, #f7ba2b 0%, #ea5358 100%);
+background: linear-gradient(to left, #ff9a9e, #fad0c4, #fbc2eb);
   width: auto;
   height: auto;
   margin: 2rem 0; /* Adds space above and below */
