--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -463,7 +463,7 @@ font-size: clamp(1rem, 4vw, 2rem);
 
 /* Button */
 .download-btn {
-background: linear-gradient(to left, #f78ca0, #f9748f, #7aa1f7);
+   background: linear-gradient(to left, #ff9a9e, #fad0c4, #fbc2eb);
   color: #181818;
   padding: 0.5rem 1.2rem;
   font-weight: bold;
