--- a/assets/css/loader.css
+++ b/assets/css/loader.css
@@ -1,7 +1,19 @@
- /* Preloader Styles */
-  /* From Uiverse.io by arshshaikh06 */ 
+#preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #000; /* or any background */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+/* Existing spinner styles here */
 .spinner {
-  background-image: linear-gradient(rgb(186, 66, 255) 35%,rgb(0, 225, 255));
+  background-image: linear-gradient(rgb(186, 66, 255) 35%, rgb(0, 225, 255));
   width: 100px;
   height: 100px;
   animation: spinning82341 1.7s linear infinite, hue 1s ease-in-out infinite;
@@ -15,6 +27,7 @@
   background-color: rgb(36, 36, 36);
   width: 100px;
   height: 100px;
+  position: absolute;
   border-radius: 50px;
   filter: blur(10px);
 }
@@ -29,7 +42,6 @@
   0% {
     filter: hue-rotate(0deg);
   }
-
   100% {
     filter: hue-rotate(360deg);
   }
