--- a/assets/css/popup.css
+++ b/assets/css/popup.css
@@ -14,7 +14,7 @@
         }
 
         .popup {
-            background-color: white;
+            background-color:#1e1e1e ;
             padding: 30px;
             border-radius: 8px;
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
