--- a/assets/css/popup.css
+++ b/assets/css/popup.css
@@ -24,7 +24,7 @@
 
         .popup h3 {
             margin-top: 0;
-            color: #333;
+            color: white;
         }
 
         .loader {
@@ -59,5 +59,5 @@
 
         .status-text {
             margin-top: 15px;
-            color: #666;
+            color: white;
         }
