--- a/assets/css/popup.css
+++ b/assets/css/popup.css
@@ -57,7 +57,7 @@
   left: 0;
   border-radius: 4px;
   animation: jump7456 0.5s linear infinite;
-margin: 20px ;
+padding: 20px ;
 }
 
 @keyframes jump7456 {
