--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -401,7 +401,7 @@ font-size: clamp(1rem, 4vw, 2rem);
   background: var(--background);
   padding: 5px;
   border-radius: 1rem;
-  width: 300px;
+  width: auto;
   box-shadow: 0 0 20px rgba(0,0,0,0.2);
 }
 
