--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -627,7 +627,15 @@ background: linear-gradient(to left, #fbc2eb , #fad0c4, #ff9a9e);
 
 
 
-
+.locker  {
+   background-color: #1e1e1e;
+            border-radius: 12px;
+            padding: 16px;
+            display: flex;
+            gap: 16px;
+            width:auto;
+            height: auto;
+        }
 
 
 
