--- a/assets/css/locker.css
+++ b/assets/css/locker.css
@@ -54,7 +54,7 @@
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
     }
-         .style-card {
+         .locker-style-card {
 background: linear-gradient(to left, #ff9a9e, #fad0c4, #fbc2eb);
   width: auto;
   height: auto;
