--- a/assets/css/locker.css
+++ b/assets/css/locker.css
@@ -1,4 +1,9 @@
-
+.locker-banner {
+      position: relative;
+      width:auto ;
+      max-width:auto;
+      margin: 0 auto;
+    }
  .locker-banner {
       position: relative;
       width: 100%;
