--- a/assets/css/locker.css
+++ b/assets/css/locker.css
@@ -3,7 +3,7 @@
       width:auto ;
       max-width:auto;
       margin: 0 auto;
-     background: 1e1e1e ; 
+     background: #1e1e1e ; 
 }
  .locker-banner {
       position: relative;
