--- a/assets/css/locker.css
+++ b/assets/css/locker.css
@@ -47,7 +47,7 @@ border-radius: 20px 20px 20px 20px;
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
     }
-         .locker-style-card {
+         .lockerstylecard {
  background: linear-gradient(to left, #ff9a9e, #fad0c4, #fbc2eb);
   width: auto;
   height: auto;
