--- a/assets/css/locker.css
+++ b/assets/css/locker.css
@@ -1,13 +1,15 @@
 /* Popup Container Styles */
 .popup-container {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(0.7);
-    z-index: 1000;
-    opacity: 0;
-    transition: all 0.3s ease-in-out;
-    display: none;
+     position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            display: none;
+            justify-content: center;
+            align-items: center;
+            z-index: 1000;
 }
 
 .popup-container.active {
