--- a/assets/css/locker.css
+++ b/assets/css/locker.css
@@ -1,7 +1,5 @@
-/* Popup Container Styles */
-.popup-container {
-    
-  position: fixed;
+        .overlay {
+            position: fixed;
             top: 0;
             left: 0;
             width: 100%;
@@ -12,21 +10,19 @@
             align-items: center;
             z-index: 1000;
         }
-
-
-.popup-container.active {
-   display: flex;
+.overlay.active {
+  display: flex;
     opacity: 1;
 }
-          
-.locker {
-           background-color: #1e1e1e;
+        .locker {
+            background-color: #1e1e1e;
             padding: 30px;
             border-radius: 8px;
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
             text-align: center;
-            width: 100%;
+            width: 300px;
         }
+
 .popup-container h2 {
     color: #2196F3;
     margin-bottom: 15px;
