--- a/assets/css/locker.css
+++ b/assets/css/locker.css
@@ -22,7 +22,7 @@
             border-radius: 8px;
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
             text-align: center;
-            width: 100%;
+            width: 300px;
         }
 
 
